Fixed the css overflow issue with AdminHistory cards

--- a/src/styles/less/Admin/AdminHistory.less
+++ b/src/styles/less/Admin/AdminHistory.less
@@ -29,6 +29,8 @@
 
             .ant-card-body{
                 padding: 1vh;
+                height: 20vh;
+                overflow: hidden;
             }
 
             .ant-card-meta-avatar{
